# Barathrum

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml  run.py  setup.cfg
app/: app.py
app/controller/: controller.py
app/controller/db/: mongo.py
app/templates/: index.html  login.html  order.html
app/tests/integration/: bd_test.py  controller_test.py
app/tests/unit/: models_test.py
app_code/: app.py
app_code/controller/: controller.py
app_code/controller/db/: envs.env  mongo.py
app_code/models/: entities.py
app_code/templates/: agreement.html  index.html  login.html  order.html  orders.html  payments.html  solutions.html
app_code/tests/: conftest.py
app_code/tests/integration/: bd_test.py  controller_test.py
app_code/tests/unit/: models_test.py
barathrum/: app.py  config.py
barathrum/controller/: controller.py
barathrum/controller/db/: mongo.py
barathrum/controller/db/sqlite/: manager.py  models.py
barathrum/models/: entities.py
barathrum/templates/: agreement.html  base.html  index.html  login.html  order.html  orders.html  payments.html  solutions.html
barathrum/tests/integration/: bd_test.py  controller_test.py
barathrum/tests/unit/: models_test.py
code/model/: base.py  cargo.py  order.py
code/model/persons/: customer.py  driver.py  person.py
docker/: .dockerignore  Dockerfile  docker-compose.yml
html/: index.html  main.css  main.html
