[tool.poetry]
name = "barathrum"
version = "0.1.0"
description = "Information System that covers cargo delivery problems"
authors = ["Mikhail Smirnov <Misha8936@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^1.9.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
